Update log-configuration.md